--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@
 
 
 pool:
-  vmImage: 'VS2017'
+  vmImage: 'windows-latest'
 
 variables:
   solution: '**/BudgetSB.sln'
@@ -33,12 +33,3 @@ steps:
     solution: '$(solution)'
     msbuildArgs: '/p:OctoPackPackageVersion=$(versionNumber)  /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)" /p:RunOctoPack=true /p:OctoPackPublishPackageToFileShare="$(build.artifactStagingDirectory)"'
     configuration: '$(buildConfiguration)'
-
-- task: SqlDacpacDeploymentOnMachineGroup@0
-  inputs:
-    TaskType: 'dacpac'
-    DacpacFile: 'BudgetSB.dacpac'
-    TargetMethod: 'server'
-    ServerName: 'localhost'
-    DatabaseName: 'BudgetSB'
-    AuthScheme: 'windowsAuthentication'
