--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,10 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
+    command: 'restore'
     restoreSolution: '$(solution)'
+    feedsToUse: 'select'
+    vstsFeed: '1cdc70cc-02f7-4329-9dea-76376046c12d'
 
 - task: VSBuild@1
   inputs:
