--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,13 @@ steps:
     msbuildArgs: '/p:OctoPackPackageVersion=$(versionNumber)  /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)" /p:RunOctoPack=true /p:OctoPackPublishPackageToFileShare="$(build.artifactStagingDirectory)"'
     configuration: '$(buildConfiguration)'
 
+- task: Pester@0
+  inputs:
+    scriptFolder: '$(System.DefaultWorkingDirectory)\*'
+    resultsFile: '$(System.DefaultWorkingDirectory)\Test-Pester.XML'
+    usePSCore: False
+    run32Bit: False
+    
 - task: OctopusPush@4
   inputs:
     OctoConnectedServiceName: 'Octopus Cloud'
