--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,13 +34,6 @@ steps:
     msbuildArgs: '/p:OctoPackPackageVersion=$(versionNumber)  /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)" /p:RunOctoPack=true /p:OctoPackPublishPackageToFileShare="$(build.artifactStagingDirectory)"'
     configuration: '$(buildConfiguration)'
 
-- task: Pester@0
-  inputs:
-    scriptFolder: '$(System.DefaultWorkingDirectory)\*'
-    resultsFile: '$(System.DefaultWorkingDirectory)\Test-Pester.XML'
-    usePSCore: False
-    run32Bit: False
-
 - task: AzurePowerShell@5
   inputs:
     ScriptType: 'InlineScript'
@@ -51,6 +44,7 @@ steps:
       Import-Module Pester
       
       Invoke-Pester -Script $(System.DefaultWorkingDirectory)\MyFirstModule.test.ps1 -OutputFile $(System.DefaultWorkingDirectory)\Test-Pester.XML -OutputFormat NUnitXML
+    preferredAzurePowerShellVersion: '5.3.0'
 
 - task: PublishTestResults@2
   inputs:
